--- a/Eos Solvers.ipynb
+++ b/Eos Solvers.ipynb
@@ -94,7 +94,11 @@
    "cell_type": "code",
    "execution_count": 53,
    "id": "6c4da191",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "trainers = []\n",
@@ -168,7 +172,13 @@
    "cell_type": "code",
    "execution_count": 55,
    "id": "3d511ebc",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -5090,7 +5100,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5104,7 +5114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
