--- a/3layerexps/erfeigensolvers/erfannealer.ipynb
+++ b/3layerexps/erfeigensolvers/erfannealer.ipynb
@@ -2726,7 +2726,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2740,7 +2740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
