--- a/scripts/erfdiagonalization.ipynb
+++ b/scripts/erfdiagonalization.ipynb
@@ -902,7 +902,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -916,7 +916,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
