lots of changes

--- a/journal/ErfNNGPEigs.ipynb
+++ b/journal/ErfNNGPEigs.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "16a84819",
    "metadata": {},
    "outputs": [],
@@ -183,15 +183,40 @@
     "n1 = 10000\n",
     "sigma_w2 = 1.0 / d\n",
     "n1_val = 10000\n",
-    "P_val = 50_000_000\n",
+    "P_val = 100_000_000\n",
     "torch.manual_seed(42)\n",
     "W0 = torch.empty(ens, n1, d, device=device).normal_(0.0, sigma_w2**0.5).to(dtype=dtype)\n",
-    "\n"
+    "\n",
+    "l3_emp, theoretical_damping = compute_lambda3_streaming(W0, P_val, batch_size=20000, ens=ens, device=device)\n",
+    "\n",
+    "d = 100\n",
+    "# Theoretical Variance with original constant\n",
+    "sigma_w2 = 1.0 / d\n",
+    "constant_part = (16 * 15 * (sigma_w2**3)) / (np.pi * 6.0)\n",
+    "# 1. Naive theory (uses expectation of norm = 1.0)\n",
+    "theory_naive = constant_part / (1 + 2 * 1.0)**3\n",
+    "print(\"Theory naive (no bias correction):\", theory_naive)\n",
+    "\n",
+    "\n",
+    "# Theoretical Variance with original constant\n",
+    "sigma_w2 = 1.0 / d\n",
+    "constant_part = (16 * 15 * (sigma_w2**3)) / (np.pi * 6.0)\n",
+    "\n",
+    "# 1. Naive theory (uses expectation of norm = 1.0)\n",
+    "theory_naive = constant_part / (1 + 2 * 1.0)**3\n",
+    "\n",
+    "# 2. Corrected theory (uses mean of the denominator across w)\n",
+    "theory_corrected = constant_part * theoretical_damping\n",
+    "\n",
+    "print(f\"\\n--- Final Comparison ---\")\n",
+    "print(f\"Empirical λ3:   {l3_emp:.8e}\")\n",
+    "print(f\"Naive Theory:   {theory_naive:.8e} (Ratio: {l3_emp/theory_naive:.4f})\")\n",
+    "print(f\"Corrected Theory: {theory_corrected:.8e} (Ratio: {l3_emp/theory_corrected:.4f})\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b835ecd4",
    "metadata": {},
    "outputs": [
@@ -199,7 +224,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Streaming P=50000000 | d=100 | n1=10000\n",
+      "Streaming P=100000000 | d=100 | n1=10000\n",
       "Weight Stats: Mean ||w||^2 = 0.9994, Std = 0.1404\n",
       "Bias Correction from Jensen's Inequality: 1.054813\n"
      ]
@@ -208,7 +233,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Batches: 100%|██████████| 2500/2500 [02:15<00:00, 18.48it/s]\n"
+      "Processing Batches: 100%|██████████| 5000/5000 [09:40<00:00,  8.61it/s]\n"
      ]
     }
    ],
@@ -218,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "id": "5e7158ad",
    "metadata": {},
    "outputs": [
@@ -242,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "id": "1e9d5a76",
    "metadata": {},
    "outputs": [
@@ -252,9 +277,9 @@
      "text": [
       "\n",
       "--- Final Comparison ---\n",
-      "Empirical λ3:   1.35762377e-04\n",
-      "Naive Theory:   4.71570202e-07 (Ratio: 287.8943)\n",
-      "Corrected Theory: 4.97418595e-07 (Ratio: 272.9339)\n"
+      "Empirical λ3:   4.73467828e-07\n",
+      "Naive Theory:   4.71570202e-07 (Ratio: 1.0040)\n",
+      "Corrected Theory: 4.97418595e-07 (Ratio: 0.9518)\n"
      ]
     }
    ],
